WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151788
REGRESSION(
r192753
): Remote Web Inspector: Window immediately closes after opening
https://bugs.webkit.org/show_bug.cgi?id=151788
Summary
REGRESSION(r192753): Remote Web Inspector: Window immediately closes after op...
Joseph Pecoraro
Reported
2015-12-02 19:27:48 PST
* SUMMARY Remote Web Inspector: Window immediately closes after opening. * STEPS TO REPRODUCE 1. Launch Application with JSContext 2. Launch Safari 3. Safari: Develop > Current Machine > App > JSContext => Remote inspection window immediately closes * NOTES - Listing dictionary now contains NSNumber keys instead of NSString keys. This is a change in behavior and results in the debuggable getting removed and readded instead of updated in place.
Attachments
[PATCH] Proposed Fix
(1.68 KB, patch)
2015-12-02 19:29 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2015-12-02 19:27:56 PST
<
rdar://problem/23736842
>
Joseph Pecoraro
Comment 2
2015-12-02 19:29:16 PST
Created
attachment 266500
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 3
2015-12-03 11:28:56 PST
Comment on
attachment 266500
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 266500 Committed
r193354
: <
http://trac.webkit.org/changeset/193354
>
WebKit Commit Bot
Comment 4
2015-12-03 11:28:59 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug