REGRESSION:(r192753): Remote Web Inspector: Window immediately closes after opening https://bugs.webkit.org/show_bug.cgi?id=151788

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-12-03
Reviewed by Timothy Hatcher.

* inspector/remote/RemoteInspector.mm:
(Inspector::RemoteInspector::pushListingsNow):
The key at the outer level was not a string. Ensure it is a
string for backwards compatibility. One day we may use
non-numeric page identifiers as listing keys.

Canonical link: https://commits.webkit.org/169945@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193354 268f45cc-cd09-0410-ab3c-d52691b4dbfc